- NEW: Improved notice dialog after creating 
       a repository. (Stefan)
- NEW: The revision graph can be saved as an 
       svg file. (Stefan)
- NEW: The context menu can be hidden completely for
       unversioned items. See issue #60 for details. (Stefan)
- NEW: dialog to make sparse checkouts easier. See
       issue #61 for details. (Stefan)
- BUG: Merged revisions must be counted only 
       once in stats (Stefan Fuhrmann)
- BUG: Relative Webviewer urls didn't work from the 
       repository browser. (Stefan)

Version 1.6.12
- BUG: hook scripts could fail due to an invalid CWD parameter
       passed to the CreateProcess API. (Stefan)

Version 1.6.11
- BUG: Using spelling dictionaries in utf8 could crash
       the commit dialog. (Stefan)
- BUG: Dialogs could hang if they were closed if the
       modeless log dialog was still open. (Stefan)
- BUG: When checking an added file in the commit dialog,
       the parent folder wasn't checked automatically if
       it was added too. (Stefan)
- BUG: when passing /tourl: to the merge command, the
       revision range page was shown instead of 
       the tree page. (Stefan)

Version 1.6.10
- BUG: Updating single items from the check-for-modifications
       dialog could lead to inconsistent working copies. (Stefan)
- BUG: Adding a file in an unversioned folder from the commit
       dialog only marked the file as added. (Stefan)
- BUG: The overlays didn't work on win2k up to XP SP2. (Stefan)
- BUG: The 'browse' button (...) in various dialogs did nothing
       when a file:/// url was specified. (Stefan)

Version 1.6.9
- BUG: the menu icons on XP were not shown correctly. (Stefan)
- BUG: the overlay icons could dissapear after upgrading from
       a previous version, a 'repair install' however would
	   fix this issue. (Stefan)
- BUG: Ignoring directories with a dot and extension in the name
       didn't work. (Stefan)
- BUG: Comparing an updated item in the update-progress dialog