@@ -172,6 +172,7 @@ protected:
     afx_msg void    OnCaretWordright();
     afx_msg void    OnEditCut();
     afx_msg void    OnEditPaste();
+    afx_msg void    OnEditSelectall();
 
     DECLARE_MESSAGE_MAP()
 
@@ -359,5 +360,4 @@ protected:
     static HICON LoadIcon(WORD iconId);
     void ReleaseBitmap();
     static bool LinesInOneChange( int direction, DiffStates firstLineState, DiffStates currentLineState );
-
 };
